overlays/prod/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
  - name: http
    port: 3000
  selector:
    app: auth
