overlays/prod/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
spec:
  ingressClassName: nginx
  rules:
  - host: auth.zfwartcc.net
    http:
      paths:
      - backend:
          service:
            name: auth
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.zfwartcc.net
    secretName: tls-auth-zfwartcc-net
